--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "my project",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
-    "start": "node server.js"
+    "dev": "node index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
