--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3001
-DB_HOST=us-cdbr-east-05.cleardb.net
+DB_HOST=localhost
 DB_USER=b993645a6a8c9f
 DB_PASSWOD=e8f706eb
 DB_DATABASE=heroku_9c4b456a49bc5ce
