--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "jshint": "^2.13.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "sequelize": "^6.20.1"
